fixed example: bg color was too dark after all, source paths have changed
--HG--
extra : convert_revision : svn%3A284f7ec5-86ef-0310-ba8a-c943e10996c6/Ophelia/trunk%40455

--- a/example/static/example.css
+++ b/example/static/example.css
@@ -1,5 +1,5 @@
 body {
-     background-color: #c93;
+     background-color: #fc3;
      color: black;
 }
 
